# aoc-2018

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  main.cpp
include/: day1.hpp  day1part1.hpp  day1part2.hpp  day2.hpp  day2part1.hpp  day2part2.hpp  day3.hpp  day3part1.hpp  day3part2.hpp  input.hpp  lines.hpp
test/: day1part1_test.cpp  day1part2_test.cpp  day2part1_test.cpp  day2part2_test.cpp  day3part1_test.cpp  day3part2_test.cpp  noop_test.cpp
